tests/paczka1/fuzzy1/12525713.err
Error in line 12: O0U421v6yfI A985 90,71
Error in line 11: O0U421v6yfI S927 33,2
Error in line 21: A985 S927 57,8
